--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "Apache-2.0",
   "keywords": [],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "check": "gts check",
     "clean": "gts clean",
     "compile": "tsc -p .",
